# faultycat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FAULTYCAT_REFACTOR_PLAN.md  LICENSE  README.md
.claude/skills/faultycat-fase-actual/: SKILL.md
.github/workflows/: firmware.yml  host-py.yml
Hardware/: BOM.csv  BuggyCat.csv  BuggyCat.kicad_pcb  BuggyCat.kicad_prl  BuggyCat.kicad_sch  Chipshouter-cat.kicad_pcb  Chipshouter-cat.kicad_prl  Chipshouter-cat.kicad_pro  Chipshouter-cat.kicad_sch  Chipshouter-cat.kicad_sch-bak  FaultyCat.kicad_pcb  FaultyCat.kicad_prl  FaultyCat.kicad_pro  FaultyCat.kicad_sch  fp-lib-table  sym-lib-table
LICENSES/: NOTICE-faultier.md  README.md
apps/faultycat_fw/: CMakeLists.txt  main.c
docs/: ARCHITECTURE.md  HARDWARE_V2.md  JTAG_INTERNALS.md  MUTEX_INTERNALS.md  PORTING.md  SAFETY.md
docs/superpowers/plans/: 2026-04-24-f4-emfi-engine.md
docs/superpowers/specs/: 2026-04-24-f4-emfi-engine-design.md
drivers/: CMakeLists.txt
drivers/crowbar_mosfet/: CMakeLists.txt  crowbar_mosfet.c  crowbar_mosfet.h
drivers/emfi_pulse/: CMakeLists.txt  emfi_pulse.c  emfi_pulse.h
drivers/ext_trigger/: CMakeLists.txt  ext_trigger.c  ext_trigger.h
drivers/hv_charger/: CMakeLists.txt  hv_charger.c  hv_charger.h
drivers/include/: board_v2.h
drivers/scanner_io/: CMakeLists.txt  scanner_io.c  scanner_io.h
drivers/target_monitor/: CMakeLists.txt  target_monitor.c  target_monitor.h
drivers/ui_buttons/: CMakeLists.txt  ui_buttons.c  ui_buttons.h
drivers/ui_leds/: CMakeLists.txt  ui_leds.c  ui_leds.h
drivers/voltage_mux/: README.md  voltage_mux.h
firmware/: README.md
firmware/c/: .gitignore  CMakeLists.txt  README.md  blueTag.h  board_config.h  faultier_test.c  faultier_test.h  generate_bluetag_header.py  main.c  picoemp.c  picoemp.h  serial.c
firmware/c/glitcher/: glitcher.c  glitcher.h  glitcher_commands.c  glitcher_commands.h
firmware/c/serial/: serial.c  serial.h  serial_utils.c  serial_utils.h
hal/: CMakeLists.txt
hal/include/hal/: adc.h  dma.h  gpio.h  pio.h  pwm.h  time.h  usb.h
hal/src/rp2040/: adc.c  dma.c  gpio.c  pio.c  pwm.c  time.c
host/faultycmd-py/: .gitignore  README.md  pyproject.toml
host/faultycmd-py/src/faultycmd/: __init__.py  __main__.py  cli.py  framing.py  persistence.py  tui.py  tui_modals.py  usb.py
host/faultycmd-py/src/faultycmd/protocols/: __init__.py  _base.py  campaign.py  crowbar.py  emfi.py  scanner.py
host/faultycmd-py/tests/: conftest.py  test_framing.py  test_persistence.py  test_protocols_campaign.py  test_protocols_crowbar.py  test_protocols_emfi.py  test_protocols_scanner.py  test_tui.py  test_tui_modals.py  test_usb.py
services/: CMakeLists.txt
services/buspirate_compat/: CMakeLists.txt  buspirate_compat.c  buspirate_compat.h
services/campaign_manager/: CMakeLists.txt  campaign_manager.c  campaign_manager.h
services/flashrom_serprog/: CMakeLists.txt  flashrom_serprog.c  flashrom_serprog.h
services/glitch_engine/: CMakeLists.txt
services/glitch_engine/crowbar/: CMakeLists.txt  crowbar_campaign.c  crowbar_campaign.h  crowbar_pio.c  crowbar_pio.h
services/glitch_engine/emfi/: CMakeLists.txt  emfi_campaign.c  emfi_campaign.h  emfi_capture.c  emfi_capture.h  emfi_pio.c  emfi_pio.h
services/host_proto/: CMakeLists.txt
services/host_proto/campaign_proto/: CMakeLists.txt  campaign_proto.c  campaign_proto.h
services/host_proto/crowbar_proto/: CMakeLists.txt  crowbar_proto.c  crowbar_proto.h
services/host_proto/emfi_proto/: CMakeLists.txt  emfi_proto.c  emfi_proto.h
services/jtag_core/: CMakeLists.txt  jtag_core.c  jtag_core.h
services/pinout_scanner/: CMakeLists.txt  pinout_scanner.c  pinout_scanner.h
services/swd_bus_lock/: CMakeLists.txt  swd_bus_lock.c  swd_bus_lock.h
services/swd_core/: CMakeLists.txt  swd_dp.c  swd_dp.h  swd_mem.c  swd_mem.h  swd_phy.c  swd_phy.h
software/faultycat-tools/: package-lock.json  package.json
software/faultycat-tools/src/: App.tsx
software/faultycat-tools/src-tauri/: Cargo.toml  tauri.conf.json
software/faultycat-tools/src-tauri/src/: lib.rs  main.rs  test_serial.rs
tests/: CMakeLists.txt  test_buspirate_compat.c  test_campaign_manager.c  test_campaign_proto.c  test_crowbar_campaign.c  test_crowbar_mosfet.c  test_crowbar_pio.c  test_crowbar_proto.c  test_emfi_campaign.c  test_emfi_capture.c  test_emfi_pio.c  test_emfi_proto.c  test_emfi_pulse.c  test_ext_trigger.c  test_flashrom_serprog.c  test_gpio.c  test_hal_dma.c  test_hal_pio.c  test_hv_charger.c  test_jtag_core.c  test_pinout_scanner.c  test_scanner_io.c  test_swd_bus_lock.c  test_swd_dp.c  test_swd_mem.c  test_swd_phy.c  test_target_monitor.c  test_time.c  test_ui_buttons.c  test_ui_leds.c
tests/hal_fake/: CMakeLists.txt  adc_fake.c  dma_fake.c  gpio_fake.c  hal_fake_adc.h  hal_fake_dma.h  hal_fake_gpio.h  hal_fake_pio.h  hal_fake_pwm.h  hal_fake_time.h  pio_fake.c  pwm_fake.c  time_fake.c
tools/: bootsel.sh  bootstrap.sh  campaign_client.py  crowbar_client.py  emfi_client.py  flash.sh  jtag_diag.py  scanner_diag.py  swd_diag.py
tools/faultycmd/: README.md  faulty.cast  faultycmd.py  requirements.txt
tools/faultycmd/Modules/: CmdInterface.py  ConfigBoard.py  UART.py  Worker.py
usb/: CMakeLists.txt
usb/include/: tusb_config.h  usb_composite.h
usb/src/: dap_stub.c  dap_stub.h  usb_composite.c  usb_descriptors.c
