[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultycmd"
version = "0.1.0"
description = "Host tool for FaultyCat v3 — click+Rich CLI and Textual TUI for EMFI / crowbar / SWD / JTAG / scanner / campaign over the USB composite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Electronic Cats" },
]
keywords = ["faultycat", "fault-injection", "emfi", "glitching", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial>=3.5",
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1",
]
build-binary = [
    "pyinstaller>=6.0",
]

[project.scripts]
faultycmd = "faultycmd.cli:main"

[project.urls]
Homepage = "https://github.com/ElectronicCats/faultycat"
"Bug Tracker" = "https://github.com/ElectronicCats/faultycat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/faultycmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]   # line-length is enforced via formatter
